# ChangeLog for dev-ruby/jquery-rails
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/jquery-rails/ChangeLog,v 1.20 2012/09/25 06:13:41 graaff Exp $

*jquery-rails-2.1.3 (25 Sep 2012)

  25 Sep 2012; Hans de Graaff <graaff@gentoo.org> +jquery-rails-2.1.3.ebuild:
  Version bump to jquery 1.8.2.

*jquery-rails-2.1.2 (14 Sep 2012)

  14 Sep 2012; Hans de Graaff <graaff@gentoo.org> +jquery-rails-2.1.2.ebuild:
  Version bump.

*jquery-rails-2.1.1 (21 Aug 2012)

  21 Aug 2012; Hans de Graaff <graaff@gentoo.org> +jquery-rails-2.1.1.ebuild:
  Version bump with jquery 1.8.

  17 Jun 2012; Hans de Graaff <graaff@gentoo.org> jquery-rails-1.0.19.ebuild,
  jquery-rails-2.0.2.ebuild:
  Avoid unneeded dependency on git.

  17 Jun 2012; Hans de Graaff <graaff@gentoo.org> -jquery-rails-1.0.18.ebuild:
  Remove old version.

  17 May 2012; Thomas Kahle <tomka@gentoo.org> jquery-rails-1.0.19.ebuild,
  jquery-rails-2.0.2.ebuild:
  marked ~x86 per bug 396547

*jquery-rails-2.0.2 (13 May 2012)

  13 May 2012; Hans de Graaff <graaff@gentoo.org> +jquery-rails-2.0.2.ebuild:
  Version bump.

  01 Mar 2012; Fabian Groffen <grobian@gentoo.org> jquery-rails-1.0.19.ebuild:
  Marked ~x64-macos

  14 Jan 2012; Hans de Graaff <graaff@gentoo.org> jquery-rails-1.0.19.ebuild:
  Use the gemspec instead of the metadata to create the specification.
  Hopefully fixes bug 397633.

  30 Dec 2011; Hans de Graaff <graaff@gentoo.org> -jquery-rails-1.0.14.ebuild,
  -jquery-rails-1.0.16.ebuild, jquery-rails-1.0.19.ebuild:
  Add ruby19.

*jquery-rails-1.0.19 (13 Dec 2011)

  13 Dec 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  +jquery-rails-1.0.19.ebuild:
  Version bump.

*jquery-rails-1.0.18 (22 Nov 2011)

  22 Nov 2011; Hans de Graaff <graaff@gentoo.org> +jquery-rails-1.0.18.ebuild:
  Version bump.

*jquery-rails-1.0.16 (16 Oct 2011)

  16 Oct 2011; Hans de Graaff <graaff@gentoo.org> +jquery-rails-1.0.16.ebuild:
  Version bump.
