@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/jquery-rails
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/jquery-rails/ChangeLog,v 1.20 2012/09/25 06:13:41 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/jquery-rails/ChangeLog,v 1.21 2012/11/27 07:10:14 graaff Exp $
+
+*jquery-rails-2.1.4 (27 Nov 2012)
+
+  27 Nov 2012; Hans de Graaff <graaff@gentoo.org> +jquery-rails-2.1.4.ebuild:
+  Version bump.
 
 *jquery-rails-2.1.3 (25 Sep 2012)
 
